--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "10.1.1",
+    "com.unity.2d.pixel-perfect": "5.0.3",
+    "com.unity.2d.psdimporter": "9.0.2",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "10.0.3",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ai.navigation": "2.0.0",
     "com.unity.animation.rigging": "1.3.0",
     "com.unity.cinemachine": "2.9.5",
